:recycle: 대응 되는 짧은 메서드로 변환